# kdesu

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5SuConfig.cmake.in  KF6SuConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kdesutest.cpp  su  sudo
po/ar/: kdesud5.po  kdesud6.po
po/ast/: kdesud5.po  kdesud6.po
po/az/: kdesud5.po  kdesud6.po
po/bg/: kdesud5.po  kdesud6.po
po/bs/: kdesud5.po  kdesud6.po
po/ca/: kdesud5.po  kdesud6.po
po/ca@valencia/: kdesud5.po  kdesud6.po
po/cs/: kdesud5.po  kdesud6.po
po/da/: kdesud5.po  kdesud6.po
po/de/: kdesud5.po  kdesud6.po
po/el/: kdesud5.po  kdesud6.po
po/en_GB/: kdesud5.po  kdesud6.po
po/eo/: kdesud5.po  kdesud6.po
po/es/: kdesud5.po  kdesud6.po
po/et/: kdesud5.po  kdesud6.po
po/eu/: kdesud5.po  kdesud6.po
po/fi/: kdesud5.po  kdesud6.po
po/fr/: kdesud5.po  kdesud6.po
po/ga/: kdesud5.po  kdesud6.po
po/gd/: kdesud5.po  kdesud6.po
po/gl/: kdesud5.po  kdesud6.po
po/he/: kdesud5.po  kdesud6.po
po/hi/: kdesud5.po  kdesud6.po
po/hu/: kdesud5.po  kdesud6.po
po/ia/: kdesud5.po  kdesud6.po
po/id/: kdesud5.po  kdesud6.po
po/is/: kdesud5.po  kdesud6.po
po/it/: kdesud5.po  kdesud6.po
po/ja/: kdesud5.po  kdesud6.po
po/ka/: kdesud5.po  kdesud6.po
po/ko/: kdesud5.po  kdesud6.po
po/lt/: kdesud5.po  kdesud6.po
po/lv/: kdesud6.po
po/ml/: kdesud5.po  kdesud6.po
po/nb/: kdesud5.po  kdesud6.po
po/nds/: kdesud5.po  kdesud6.po
po/nl/: kdesud5.po  kdesud6.po
po/nn/: kdesud5.po  kdesud6.po
po/pa/: kdesud5.po  kdesud6.po
po/pl/: kdesud5.po  kdesud6.po
po/pt/: kdesud5.po  kdesud6.po
po/pt_BR/: kdesud5.po  kdesud6.po
po/ro/: kdesud5.po  kdesud6.po
po/ru/: kdesud5.po  kdesud6.po
po/sa/: kdesud6.po
po/se/: kdesud5.po  kdesud6.po
po/sk/: kdesud5.po  kdesud6.po
po/sl/: kdesud5.po  kdesud6.po
po/sr/: kdesud5.po  kdesud6.po
po/sr@ijekavian/: kdesud5.po  kdesud6.po
po/sr@ijekavianlatin/: kdesud5.po  kdesud6.po
po/sr@latin/: kdesud5.po  kdesud6.po
po/sv/: kdesud5.po  kdesud6.po
po/ta/: kdesud6.po
po/tg/: kdesud5.po  kdesud6.po
po/tr/: kdesud5.po  kdesud6.po
po/ug/: kdesud6.po
po/uk/: kdesud5.po  kdesud6.po
po/vi/: kdesud5.po  kdesud6.po
po/zh_CN/: kdesud5.po  kdesud6.po
po/zh_TW/: kdesud5.po  kdesud6.po
src/: CMakeLists.txt  client.cpp  client.h  config-kdesu.h.cmake  defaults.h  kcookie.cpp  kcookie_p.h  kdesu-index.qdoc  kdesu.qdoc  kdesu.qdocconf  kdesu_stub.c  process.cpp  process.h  ptyprocess.cpp  ptyprocess.h  ptyprocess_p.h  ssh.cpp  ssh.h  sshprocess.cpp  sshprocess.h  stub.cpp  stub.h  stubprocess.cpp  stubprocess.h  stubprocess_p.h  su.cpp  su.h  suprocess.cpp  suprocess.h
src/compatheaders/: process.h  ssh.h  stub.h  su.h
src/kdesud/: CMakeLists.txt  Messages.sh  config-kdesud.h.cmake  handler.cpp  handler.h  kdesud.cpp  lexer.cpp  lexer.h  repo.cpp  repo.h  secure.cpp  secure.h
src/kdesud/autotests/: CMakeLists.txt  kdesudtest.cpp
